# La-Bonne-Table

./: .gitignore  CLAUDE.md  README.md  SESSION_STATE.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: seed_data.py  show_kpi.py  show_rules.py
src/la_bonne_table/: dashboard.py  db.py  demo_data.py  ingest.py  kpi.py  report.py  rules.py
src/la_bonne_table/ai/: __init__.py  context.py  provider.py  summary.py
tests/: conftest.py  test_ai.py  test_demo_data.py  test_ingest.py  test_kpi.py  test_report.py  test_rules.py
